Revision history for Perl extension Alien::wxWidgets.

0.50

0.49  Sat Jan  9 10:39:02 CET 2010
	- Support GCC 4 and 64 bit GCC builds on Windows (patch by KMX).
	- Fix monolithic build handling for wxWidgets' 2.8.x.

0.48  Fri Dec 25 18:23:56 CET 2009
	- Fix the compiler check for Visual C++.

0.47  Sat Dec  5 16:16:05 CET 2009
	- Released 0.46_01 as 0.47.

0.46_01  Tue Nov 24 20:34:25 CET 2009
	- Do not give a warning when installed using WiX
	  (patch by Curtis Jewell).
	- Tentative patch to correctly detect wxWidgets under OpenBSD,
	  based on RT ticket 41678.
	- Under Solaris, use GNU Make to build wxWidgets, and fail if it
	  is not present or can't be detected.
	- Detect wxWidgets versions that have been installed using
	  Alien::wxWidgets itself and avoid needlessly recompiling/reinstalling
	  it.

0.46  Sun Nov  8 16:25:02 CET 2009
	- Allow choosing the wxWidgets version to build (defaults to
	  the latest stable release when building from the CPAN shell).
	- Add a build configuration for wxWidgets 2.9.0.
	- On Snow Leopard, build wxCocoa when building wxWidgets 2.9.0
	  with a 64 bit Perl.
	- On Windows, enable the 'portable' option by default (finds the
	  wxWidgets libraries relative to the Alien::wxWidgets installation
	  directory).

0.45  Wed Oct 14 22:54:35 CEST 2009
	- On Snow Leopard, abort wxWidgets build if Perl is 64 bit.
	- On Snow Leopard, force wxWidgets build to be 32 bit.

0.44  Sun Aug  9 12:56:05 CEST 2009
	- Rename all command line options to avoid clashing with
	  Module::Build options.

0.43  Sun May 10 09:46:05 CEST 2009
	- Fix building under recent FreeBSD versions (patch by Cezary Morga).
	- Correctly handle monolithic build on wxWidgets' 2.9.x.
	- Support Cocoa builds for wxWidgets 2.9.x.
	- Fix building wxWidgets when the build path contains spaces.
	- Patch and build wxWidgets 2.8.10.

0.42  Sat Nov  8 00:51:18 CET 2008
	- Add an option for building with Unicode support in interactive
	  configuration (defaults to yes).